Fix action button layout on small screens when keyboard is raised

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -127,7 +127,7 @@ img {
   margin-bottom: 1em;
 }
 
-.quote-actions {
+.action-buttons {
   margin: 1em auto;
 }
 
